--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,20 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
+	<distributionManagement>
+	<repository>
+		<id>deploymentRepo</id>
+		<name>Internal Releases</name>
+		<url>http://<52.55.153.200>:8081/repository/maven-releases/</url>
+	</repository>
+ 
+	<snapshotRepository>
+		<id>deploymentRepo</id>
+		<name>Internal Releases</name>
+		<url>http://<52.55.153.200>:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+</distributionManagement>
+
 
 	<dependencies>
 		<dependency>
