updated pom file

--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 	<repository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://<52.55.153.200>:8081/repository/maven-releases/</url>
+		<url>http://52.55.153.200:8081/repository/maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://<52.55.153.200>:8081/repository/maven-snapshots/</url>
+		<url>http://52.55.153.200:8081/repository/maven-snapshots/</url>
 	</snapshotRepository>
 </distributionManagement>
 
